--- a/index.html
+++ b/index.html
@@ -1,87 +1,148 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIRIUS ELEC – Électricité générale</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #0f172a;
-            color: white;
-            padding: 35px 20px;
-            text-align: center;
-        }
-        section {
-            max-width: 900px;
-            margin: auto;
-            padding: 30px 20px;
-            background: white;
-        }
-        h2 {
-            color: #0f172a;
-            border-bottom: 2px solid #e5e7eb;
-            padding-bottom: 5px;
-        }
-        ul li {
-            margin: 10px 0;
-        }
-        .contact {
-            background: #e5e7eb;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        footer {
-            background: #0f172a;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 14px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SIRIUS ELEC | Électricien à Clamart</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background-color: #f8fafc;
+      color: #1f2937;
+      line-height: 1.6;
+    }
+
+    header {
+      background: linear-gradient(135deg, #0f172a, #1e293b);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 42px;
+      letter-spacing: 2px;
+    }
+
+    header p {
+      margin-top: 10px;
+      font-size: 18px;
+      opacity: 0.9;
+    }
+
+    section {
+      max-width: 1000px;
+      margin: auto;
+      padding: 50px 20px;
+    }
+
+    h2 {
+      color: #0f172a;
+      margin-bottom: 15px;
+    }
+
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.06);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #1e293b;
+    }
+
+    .contact {
+      background: #e5e7eb;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+    }
+
+    .contact a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #0f172a;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    footer {
+      background: #0f172a;
+      color: #cbd5f5;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
-    <h1>SIRIUS ELEC</h1>
-    <p>Électricité générale • Installation • Dépannage • Mise aux normes</p>
+  <h1>SIRIUS ELEC</h1>
+  <p>Électricité générale • Installation • Dépannage • Mise aux normes</p>
 </header>
 
 <section>
-    <h2>À propos</h2>
-    <p>
-        SIRIUS ELEC est une entreprise d’électricité spécialisée dans
-        l’installation, la rénovation et le dépannage électrique pour les
-        particuliers et les professionnels.
-    </p>
+  <h2>À propos</h2>
+  <p>
+    SIRIUS ELEC est une entreprise d’électricité basée à Clamart.
+    Nous accompagnons particuliers et professionnels pour tous travaux
+    électriques, avec sérieux, sécurité et réactivité.
+  </p>
+</section>
 
-    <h2>Nos services</h2>
-    <ul>
-        <li>✔️ Installation électrique complète</li>
-        <li>✔️ Dépannage rapide</li>
-        <li>✔️ Mise aux normes électriques</li>
-        <li>✔️ Tableaux électriques</li>
-        <li>✔️ Éclairage intérieur et extérieur</li>
-    </ul>
-
-    <h2>Adresse</h2>
-    <p>📍 3 route de Pavé Blanc, 92140 Clamart</p>
-
-    <h2>Contact</h2>
-    <div class="contact">
-        <p>📧 Email : <strong>Sirius.elec@hotmail.com</strong></p>
-        <p>🕒 Disponibilité : 7j/7</p>
+<section>
+  <h2>Nos services</h2>
+  <div class="services">
+    <div class="card">
+      <h3>Installation électrique</h3>
+      <p>Installations neuves et rénovations complètes, conformes aux normes en vigueur.</p>
     </div>
+    <div class="card">
+      <h3>Dépannage</h3>
+      <p>Intervention rapide en cas de panne ou dysfonctionnement électrique.</p>
+    </div>
+    <div class="card">
+      <h3>Mise aux normes</h3>
+      <p>Sécurisation et mise en conformité de vos installations électriques.</p>
+    </div>
+    <div class="card">
+      <h3>Éclairage</h3>
+      <p>Éclairage intérieur et extérieur, solutions modernes et économiques.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Zone d’intervention</h2>
+  <p>📍 3 route de Pavé Blanc, 92140 Clamart  
+  <br>Interventions à Clamart et alentours.</p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <div class="contact">
+    <p>📧 Email professionnel</p>
+    <a href="mailto:contact@siriuselec.fr">contact@siriuselec.fr</a>
+    <p>Disponibilité 7j/7</p>
+  </div>
 </section>
 
 <footer>
-    <p>© SIRIUS ELEC – Tous droits réservés</p>
-    <p>Informations non diffusables</p>
+  <p>© SIRIUS ELEC – Tous droits réservés</p>
+  <p>Informations non diffusables</p>
 </footer>
 
 </body>
